{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 6,
  "lineage": "b7dad4fa-7098-7e19-202d-0c9b51849b31",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Monitoring_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e76978adeb8c48",
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:instance/i-03962f25a5beface6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03962f25a5beface6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "multi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c4f3c65dba0a0220",
            "private_dns": "ip-10-0-3-79.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ed1f8b810af66a34",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07240f827d494863c",
            "tags": {
              "Name": "ecr-jobposting-monitoring"
            },
            "tags_all": {
              "Name": "ecr-jobposting-monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd3e16101448f3e6"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.monitoring_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_subnet.pri_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f1e61a80c7ab943e",
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:instance/i-0593daa5abc553569",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0593daa5abc553569",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "multi-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09a6b3a61c3e4762e",
            "private_dns": "ip-10-0-1-215.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.215",
            "public_dns": "ec2-54-180-147-186.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.147.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0683ca84cd589b0ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090ba811e1f311cc6",
            "tags": {
              "Name": "ecr-jobposting-Bastion"
            },
            "tags_all": {
              "Name": "ecr-jobposting-Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acead772bde329b3"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "was_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-was-alb/6e11258b54016161",
            "arn_suffix": "app/ecr-jobposting-was-alb/6e11258b54016161",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecr-jobposting-was-alb-259531129.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-was-alb/6e11258b54016161",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecr-jobposting-was-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9650bfc3f06e725"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090ba811e1f311cc6"
              },
              {
                "subnet_id": "subnet-0a9606e09c59596c8"
              }
            ],
            "subnets": [
              "subnet-090ba811e1f311cc6",
              "subnet-0a9606e09c59596c8"
            ],
            "vpc_id": "vpc-0b5eb67c0b5da620d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.was_alb_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-web-alb/935bb7dd0018ec8f",
            "arn_suffix": "app/ecr-jobposting-web-alb/935bb7dd0018ec8f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecr-jobposting-web-alb-583481682.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-web-alb/935bb7dd0018ec8f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecr-jobposting-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fdceb7281024ac7d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090ba811e1f311cc6"
              },
              {
                "subnet_id": "subnet-0a9606e09c59596c8"
              }
            ],
            "subnets": [
              "subnet-090ba811e1f311cc6",
              "subnet-0a9606e09c59596c8"
            ],
            "vpc_id": "vpc-0b5eb67c0b5da620d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "was_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:listener/app/ecr-jobposting-was-alb/6e11258b54016161/ae31bd58f5c9b99e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:listener/app/ecr-jobposting-was-alb/6e11258b54016161/ae31bd58f5c9b99e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-was-alb/6e11258b54016161",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.was_alb",
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.was_alb_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_alb_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:listener/app/ecr-jobposting-web-alb/935bb7dd0018ec8f/adbae8d161231e7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:listener/app/ecr-jobposting-web-alb/935bb7dd0018ec8f/adbae8d161231e7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:loadbalancer/app/ecr-jobposting-web-alb/935bb7dd0018ec8f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.web_alb",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was_alb_tg_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-was-alb-tg-8080/7e98ed7840bda577",
            "arn_suffix": "targetgroup/ecr-jobposting-was-alb-tg-8080/7e98ed7840bda577",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 59,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-was-alb-tg-8080/7e98ed7840bda577",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecr-jobposting-was-alb-tg-8080",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was_alb_tg_8888",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-was-alb-tg-8888/acbe63a0dc128738",
            "arn_suffix": "targetgroup/ecr-jobposting-was-alb-tg-8888/acbe63a0dc128738",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 59,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-was-alb-tg-8888/acbe63a0dc128738",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecr-jobposting-was-alb-tg-8888",
            "port": 8888,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_alb_grafana_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-grafana-tg/d433114c7ab30449",
            "arn_suffix": "targetgroup/ecr-jobposting-grafana-tg/d433114c7ab30449",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-grafana-tg/d433114c7ab30449",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecr-jobposting-grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-web-alb-tg/521972f4aa79606f",
            "arn_suffix": "targetgroup/ecr-jobposting-web-alb-tg/521972f4aa79606f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-web-alb-tg/521972f4aa79606f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecr-jobposting-web-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_alb_zabbix_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-zabbix-tg/ed279af6d64cf41b",
            "arn_suffix": "targetgroup/ecr-jobposting-zabbix-tg/ed279af6d64cf41b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-zabbix-tg/ed279af6d64cf41b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecr-jobposting-zabbix-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_alb_grafana_tg_at",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-grafana-tg/d433114c7ab30449-20241223142857847200000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-grafana-tg/d433114c7ab30449",
            "target_id": "i-03962f25a5beface6"
          },
          "dependencies": [
            "module.compute.aws_instance.Monitoring_ec2",
            "module.compute.aws_lb_target_group.web_alb_grafana_tg",
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.monitoring_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_subnet.pri_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_alb_zabbix_tg_at",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-zabbix-tg/ed279af6d64cf41b-20241223142857793900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:662947429974:targetgroup/ecr-jobposting-zabbix-tg/ed279af6d64cf41b",
            "target_id": "i-03962f25a5beface6"
          },
          "dependencies": [
            "module.compute.aws_instance.Monitoring_ec2",
            "module.compute.aws_lb_target_group.web_alb_zabbix_tg",
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.monitoring_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_subnet.pri_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f24632b89e99946e",
            "domain": "vpc",
            "id": "eipalloc-0f24632b89e99946e",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-164-55-59.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.55.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:internet-gateway/igw-073efca913bc2eba8",
            "id": "igw-073efca913bc2eba8",
            "owner_id": "662947429974",
            "tags": {
              "Name": "ecr-jobposting-igw"
            },
            "tags_all": {
              "Name": "ecr-jobposting-igw"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f24632b89e99946e",
            "association_id": "eipassoc-0884f82e0b67e2312",
            "connectivity_type": "public",
            "id": "nat-0c924e4aa2c02a3d2",
            "network_interface_id": "eni-0c1d80628f0afee21",
            "private_ip": "10.0.1.217",
            "public_ip": "15.164.55.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-090ba811e1f311cc6",
            "tags": {
              "Name": "ecr-jobposting-nat"
            },
            "tags_all": {
              "Name": "ecr-jobposting-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:route-table/rtb-05256bea764c8f537",
            "id": "rtb-05256bea764c8f537",
            "owner_id": "662947429974",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecr-jobposting-db-rt"
            },
            "tags_all": {
              "Name": "ecr-jobposting-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:route-table/rtb-0a27d552d44472ec4",
            "id": "rtb-0a27d552d44472ec4",
            "owner_id": "662947429974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c924e4aa2c02a3d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecr-jobposting-pri-rt"
            },
            "tags_all": {
              "Name": "ecr-jobposting-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:route-table/rtb-0476a1b24ebbc5925",
            "id": "rtb-0476a1b24ebbc5925",
            "owner_id": "662947429974",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073efca913bc2eba8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecr-jobposting-pub-rt"
            },
            "tags_all": {
              "Name": "ecr-jobposting-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eebaa944d15291c",
            "route_table_id": "rtb-05256bea764c8f537",
            "subnet_id": "subnet-0ae6e937d2af32a35"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02104ca9d6b653a6e",
            "route_table_id": "rtb-05256bea764c8f537",
            "subnet_id": "subnet-0594f6e83c880b2c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.db_rt",
            "module.vpc.aws_subnet.db_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bf511acfc69b15d",
            "route_table_id": "rtb-0a27d552d44472ec4",
            "subnet_id": "subnet-074561e697fb073c8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.pri_subnet",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de032cd5edc33142",
            "route_table_id": "rtb-0a27d552d44472ec4",
            "subnet_id": "subnet-07240f827d494863c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.pri_rt",
            "module.vpc.aws_subnet.pri_subnet",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054541955e3ba9973",
            "route_table_id": "rtb-0476a1b24ebbc5925",
            "subnet_id": "subnet-0a9606e09c59596c8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0933821b930a3ec67",
            "route_table_id": "rtb-0476a1b24ebbc5925",
            "subnet_id": "subnet-090ba811e1f311cc6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0acead772bde329b3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acead772bde329b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ecr-jobposting-bastion-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-bastion-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0736a85d7132d0f85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0736a85d7132d0f85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acead772bde329b3"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f29df2591f89bfcf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecr-jobposting-db-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-db-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.was_alb_sg",
            "module.vpc.aws_security_group.was_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0cd3e16101448f3e6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd3e16101448f3e6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acead772bde329b3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdceb7281024ac7d"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdceb7281024ac7d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ecr-jobposting-monitoring-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-monitoring-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0d9650bfc3f06e725",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9650bfc3f06e725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0141fb6f0d996d036"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0141fb6f0d996d036"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecr-jobposting-was-alb-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-was-alb-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-was-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0f29df2591f89bfcf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f29df2591f89bfcf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9650bfc3f06e725"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9650bfc3f06e725"
                ],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "ecr-jobposting-was-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-was-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.was_alb_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0fdceb7281024ac7d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdceb7281024ac7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecr-jobposting-web-alb-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-web-alb-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:security-group/sg-0141fb6f0d996d036",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0141fb6f0d996d036",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0acead772bde329b3"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fdceb7281024ac7d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecr-jobposting-web-sg",
            "name_prefix": "",
            "owner_id": "662947429974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecr-jobposting-web-sg"
            },
            "tags_all": {
              "Name": "ecr-jobposting-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion_sg",
            "module.vpc.aws_security_group.web_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0ae6e937d2af32a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae6e937d2af32a35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-private-3"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-private-3"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0594f6e83c880b2c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0594f6e83c880b2c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-private-4"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-private-4"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-074561e697fb073c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074561e697fb073c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-private-1"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-private-1"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-07240f827d494863c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07240f827d494863c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-private-2"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-private-2"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-0a9606e09c59596c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9606e09c59596c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-public-1"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-public-1"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:subnet/subnet-090ba811e1f311cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ba811e1f311cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "662947429974",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecr-jobposting-subnet-public-2"
            },
            "tags_all": {
              "Name": "ecr-jobposting-subnet-public-2"
            },
            "vpc_id": "vpc-0b5eb67c0b5da620d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:662947429974:vpc/vpc-0b5eb67c0b5da620d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9ef63a8908c0cbc",
            "default_route_table_id": "rtb-0d5046159a2d79d4a",
            "default_security_group_id": "sg-0355e4345c02432a4",
            "dhcp_options_id": "dopt-0f8b57f0fd990868a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5eb67c0b5da620d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5046159a2d79d4a",
            "owner_id": "662947429974",
            "tags": {
              "Name": "ecr-jobposting-vpc"
            },
            "tags_all": {
              "Name": "ecr-jobposting-vpc"
            }
          }
        }
      ]
    }
  ]
}